[package]
name = "chip8"
version = "0.1.0"
authors = ["cnewman <chrisnewman@quickenloans.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
clap = "2.33.0"
crossterm = "0.10.2"

[dependencies.tui]
version = "0.6.2"
default-features = false
features = ['crossterm']
