[package]
name = "chip8"
version = "0.1.1"
authors = ["chazcross@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.1"
minifb = "0.28.0"
crossterm = "0.29.0"
clap = { version = "4.0", features = ["derive"] }

[dependencies.tui]
version = "0.19.0"
default-features = false
features = ['crossterm']
